fixed banner logo on index on mobile s

--- a/css/breakpoint-320px.css
+++ b/css/breakpoint-320px.css
@@ -2,4 +2,7 @@
     main > h1 {
         font-size: 1.5rem;
     }
+    .banner .banner-conteudo {
+        font-size: 2rem;
+    }
 }
